@@ -1,6 +1,7 @@
 * ???
 - [lc] fixed several bugs related to the use of umask
 - [lc] cleanup the tests
+- [lc] fixed another race condition in dirq.QueueSimple.purge()
 
 * Wed Jan  8 2014 Lionel Cons <lionel.cons@cern.ch> - 1.5
 - [lc] fixed a race condition in dirq.QueueSimple.purge()
